--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <!-- top -->
     <section class="top">
-     <div class="header">
+     <div class="Header">
         <div class="nav">
             <h1>NETFLIX</h1>
         </div>
         <div class="right_nav">
-            <button class="btn1"><img src="./img/asset 7.svg" alt=""><h4>English</h4> <img src="./img/asset 8.svg" alt=""></button>
+            <button class="btn1"><img src="./img/asset 7.svg" alt=""><h6>English</h6> <img src="./img/asset 8.svg" alt=""></button>
             <a href="./signin.html" class="btn2">Sign In</a>
         </div>
      </div>
      <div class="text_info">
-        <h2>Unlimited movies, TV shows and more</h2>
-        <p>Watch anywhere. Cancel anytime.br <br>Ready to watch? Enter your email to create or restart your membership.</p>
+        <h1>Enjoy big movies, hit series and more from ₹ 149.</h1>
+        <p>Join today. Cancel anytime.br </p>
+        <p>Ready to watch? Enter your email to create or restart your membership.</p>
      </div>
      <div class="lower_menu">
         <input type="email" placeholder="Email Address">
@@ -31,6 +34,240 @@
      </div>
     </section>
 
+    <div class="progress" style="height: 8px; background-color: rgb(57, 53, 59);">
+        <div></div>
+    </div>
+
+    <div class="Container">
+        <div class="left">
+            <h1 class="Heading">Enjoy on your TV</h1>
+            <p class="Content">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more. </p>
+        </div>
+        <div class="Right">
+            <img src="./img/tv.png" alt="Image is not supported by your browser ." width="100%">
+        </div>
+    </div>
+
+    <div class="progress" style="height: 8px; background-color: rgb(57, 53, 59);">
+        <div></div>
+    </div>
+
+    <div class="container1">
+        <div class="left1">
+            <img src="./img/second.jpg" alt="Image is not supported by your browser ." width="100%">
+        </div>
+        <div class="right1">
+            <h1 class="Heading">Download your shows to watch offline</h1>
+            <p class="Content">Save your favourites easily and always have something to watch.</p>
+        </div>
+    </div>
+
+    <div class="progress" style="height: 8px; background-color: rgb(57, 53, 59);">
+        <div></div>
+    </div>
+
+    <div class="Container">
+        <div class="left">
+            <h1 class="Heading">Watch everywhere</h1>
+            <p class="Content">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+        </div>
+        <div class="Right">
+            <img src="./img/third.png" alt="Image is not supported by your browser ." width="100%">
+        </div>
+    </div>
+
+    <div class="progress" style="height: 8px; background-color: rgb(57, 53, 59);">
+        <div></div>
+    </div>
+
+    <div class="container1">
+        <div class="left1">
+            <img src="./img/fourth.png" alt="Image is not supported by your browser ." width="100%">
+        </div>
+        <div class="right1">
+            <h1 class="Heading">Create profiles for kids</h1>
+            <p class="Content">Send children on adventures with their favourite characters in a space made just for them—free with your membership.</p>
+        </div>
+    </div>
+
+
+    <div class="progress" style="height: 8px; background-color: rgb(57, 53, 59);">
+        <div></div>
+    </div>
+
+
+
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <br>
+            <div class="col-lg-10 mt"><p class="text-center text-white h1 display-4">Frequently Asked Questions</p></div>
+         </div>   
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed accbtn text-white" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                What is Netflix ?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accbtn text-white h5" style="height: 180px;">
+                                <div>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and
+                                more – on thousands of internet-connected devices.</div>
+                            <br>
+                            <div>You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's
+                            always something new to discover, and new TV shows and movies are added every week!</div>
+                           </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed accbtn text-white" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                How much does Netflix cost ?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accbtn text-white h5">Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans
+                            range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.</div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed accbtn text-white" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                Where can i watch ?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accbtn text-white h5" style="height: 180px;">
+                                <div>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your
+                                personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones,
+                                tablets, streaming media players and game consoles.</div>
+                                <br>
+                                <div>You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're
+                                on the go and without an internet connection. Take Netflix with you anywhere.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingFour">
+                            <button class="accordion-button collapsed accbtn text-white" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                                How do i cancle ?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accbtn text-white h5">Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in
+                            two clicks. There are no cancellation fees – start or stop your account anytime.
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingFive">
+                            <button class="accordion-button collapsed accbtn text-white" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapsefive">
+                                What can i watch in Netflix ?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accbtn text-white h5">Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and
+                            more. Watch as much as you want, anytime you want.
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingSix">
+                            <button class="accordion-button collapsed accbtn text-white" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                                Is NEtflix good for kids ?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accbtn text-white h5" style="height: 180px;">
+                                <div>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV
+                                shows and films in their own space.</div>
+                                <br>
+                                <div>Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can
+                                watch and block specific titles you don’t want kids to see.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <br>
+        <div class="row justify-content-center">
+            <div class="col-lg-10 mt-5">
+                <h5 class="text-center text-white">Ready to watch? Enter your email to create or restart your membership.</h5>
+                <div class="lower_menu">
+                    <input type="email" placeholder="Email Address">
+                    <button class="btn">Get Started ></button>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        </div>
+    </div>
+
+
+    <div class="progress" style="height: 8px; background-color: rgb(57, 53, 59);">
+        <div></div>
+    </div>
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <p>Questions? Call 000-800-919-1694</p>
+            <div class="col-md-3">
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <button class="btn1"><img src="./img/asset 7.svg" alt="">
+                    <h6>English</h6> <img src="./img/asset 8.svg" alt="">
+                </button><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a>
+            </div>
+            <div class="col-md-3">
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+            </div>
+            <div class="col-md-3">
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+            </div>
+            <div class="col-md-3">
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+            </div>
+        </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/5eb391e4c9.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
