--- a/index.html
+++ b/index.html
@@ -232,35 +232,31 @@
         <div class="row justify-content-center">
             <p>Questions? Call 000-800-919-1694</p>
             <div class="col-md-3">
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">FAQ</a><br><br>
+                <a href="#" class="stretched-link text-white">Investor Relations</a><br><br>
+                <a href="#" class="stretched-link text-white">Privacy</a><br><br>
+                <a href="#" class="stretched-link text-white">Speed Test</a><br><br>
                 <button class="btn1"><img src="./img/asset 7.svg" alt="">
                     <h6>English</h6> <img src="./img/asset 8.svg" alt="">
                 </button><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a>
+                <a href="#" class="stretched-link text-white">Netflix India</a>
             </div>
             <div class="col-md-3">
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Help Centre</a><br><br>
+                <a href="#" class="stretched-link text-white">Jobs</a><br><br>
+                <a href="#" class="stretched-link text-white">Cookie Preferences</a><br><br>
+                <a href="#" class="stretched-link text-white">Legal Notice</a><br><br>
             </div>
             <div class="col-md-3">
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Accounts</a><br><br>
+                <a href="#" class="stretched-link text-white">Ways to Watch</a><br><br>
+                <a href="#" class="stretched-link text-white">Corporate Information</a><br><br>
+                <a href="#" class="stretched-link text-white">Only on netflix</a><br><br>
             </div>
             <div class="col-md-3">
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
-                <a href="#" class="stretched-link text-white">Go somewhere</a><br><br>
+                <a href="#" class="stretched-link text-white">Media Centre</a><br><br>
+                <a href="#" class="stretched-link text-white">Terms of Use</a><br><br>
+                <a href="#" class="stretched-link text-white">Contact US</a><br><br>
             </div>
         </div>
     </div>
